--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ Our trained, experienced, insured and bonded staff use high-quality [Jangro clea
 ---
 <Layout title="KHC Global - Professional Cleaning Services">
     <ContextAlert class="mb-8" />
-    <h1 class="mb-10">Kwalj Hill Crest</h1>
+    <h1 class="mb-10">KHC Global Services/h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
     <p>
         <a href="tel:+234 701 574 4444" class="btn btn-lg sm:min-w-64">Call for Free Quote</a>
