--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,6 +50,6 @@
     </footer>
 
     <!-- JavaScript from /public directory -->
-    <script src="/script.js"></script>
+    <script is:inline src="/script.js"></script>
 </body>
 </html>
